--- a/index.html
+++ b/index.html
@@ -28,13 +28,9 @@
         <div class="content">
             <h1 class="content-heading">Luxury redefined, a ‘home experience’, exclusively yours!</h1>
             <p class="content-text">
-                Imagine having your own 4.5 acre playground, in a dazzling and undisturbed private estate, which is
-                off limits to everyone but you, right on prettiest and longest stretches of pristine beach ( 2km ),
-                Cote d’Or beach, on Praslin island. <b>That’s La Cigale Estate</b>, Praslin’s first exclusive-use
-                private estate – an idyllic and gracefully, elegant, colonial style nine-bedroom estate, located at
-                Cote D’Or, Praslin; that offers curated experiences and limitless private living to its guests:
-                somewhere to retreat, explore, connect, rejuvenate, celebrate… and dream with your eyes open. Our
-                journey designers are here to create your experiences.
+                Picture this: your very own 4.5-acre beachfront playground on blissful Praslin Island in the Indian Ocean, living out sun kissed days in our newly built, nine-bedroom colonial style estate on a pristine, two kilometre stretch of palm dappled sand known as Côte d’Or Beach.
+That fantasy is in fact La Cigale Estate, Praslin’s first and only exclusive-use private estate, managed to international standards and offering custom curated guest experiences along with limitless Seychellois hospitality to its honoured guests.
+Retreat, explore, reconnect, celebrate, and rejuvenate. Come dream with your eyes open!
             </p>
         </div>
     </div>
