--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="content">
             <h1 class="content-heading">Luxury redefined, a ‘home experience’, exclusively yours!</h1>
             <p class="content-text">
-                Picture this: your very own 4.5-acre beachfront playground on blissful Praslin Island in the Indian Ocean, living out sun kissed days in our newly built, nine-bedroom colonial style estate on a pristine, two kilometre stretch of palm dappled sand known as Côte d’Or Beach. That fantasy is in fact <b>La Cigale Estate</b>, Praslin’s first and only exclusive-use private estate, managed to international standards and offering custom curated guest experiences along with limitless Seychellois hospitality to its honoured guests. Retreat, explore, reconnect, celebrate, and rejuvenate. Come dream with your eyes open!
+                Picture this: your very own 4.5-acre beachfront playground on blissful Praslin Island in the Indian Ocean, living out sun kissed days in our newly built, nine-bedroom colonial style estate on a pristine, two kilometre stretch of palm dappled sand known as Côte d’Or beach. That fantasy is in fact <b>La Cigale Estate</b>, Praslin’s first and only exclusive-use private estate, managed to international standards and offering custom curated guest experiences along with limitless Seychellois hospitality to its honoured guests. Retreat, explore, reconnect, celebrate, and rejuvenate. Come dream with your eyes open!
             </p>
         </div>
     </div>
